# windows-time-sync

./: .env.example  CHANGELOG.md  build.bat  pyproject.toml  readme.md  requirements.tests.txt  test.py  test_gui.py
.github/workflows/: pytest.yml
examples/: timezones.json
tests/: test_provider_timezones_world_api.py
tests/unit/: test_controller.py  test_windows_datetime.py
tests/unit/providers/world_time_org/: test_time_now.py  test_timezones.py
windows_time_sync/: __main__.py  controller.py  entrypoint.py  mapping.py  settings.py  windows.py
windows_time_sync/_protocols/: http_client.py  provider.py
windows_time_sync/providers/: world_time_org.py
