[tool.poetry]
name = "windows-time-sync"
version = "0.1.0"
description = "A simple program that fixes the Windows time synchronization."
authors = ["João Paulo Carvalho <jjpaulo2@protonmail.com>"]
readme = "README.md"
packages = [{include = "windows_time_sync"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pywin32 = "^305"
pysimplegui = "^4.60.4"
httpx = "^0.23.3"
dependency-injection = "^1.2.0"
pydantic = "^1.10.5"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.8.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
mypy = "^1.0.1"
bandit = "^1.7.4"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"
pytest-randomly = "^3.12.0"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
py-version = "3.11"
ignore = [
    "missing-docstring"
]
